--- a/app/src/main/res/layout/activity_weibo_detail.xml
+++ b/app/src/main/res/layout/activity_weibo_detail.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-</LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_alignParentTop="true"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <include layout="@layout/activity_view_toolbar"></include>
+            <include layout="@layout/weibo_list_item_titlebar" />
+            <include layout="@layout/weibo_list_item_body"></include>
+        </LinearLayout>
+    </ScrollView>
+    <include layout="@layout/weibo_list_item_bottombar" />
+</FrameLayout>
