--- a/app/src/main/res/layout/activity_write_weibo.xml
+++ b/app/src/main/res/layout/activity_write_weibo.xml
@@ -25,7 +25,7 @@
             android:textSize="15sp"/>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/weibo_photo_grid"
+            android:id="@+id/rv_weibo_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
