--- a/app/src/main/res/layout/weibo_list_item_body.xml
+++ b/app/src/main/res/layout/weibo_list_item_body.xml
@@ -1,6 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/weibo_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/timeline_feedcard_retweet_background_auto"
+    android:clickable="true"
+    android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/et_weibo_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:enabled="false"
+        android:editable="false"
+        android:lineSpacingExtra="@dimen/home_original_weiboitem_linespace"
+        android:padding="8dp"
+        android:text="确实像是笔记本电池，两个凸起是防滑垫脚？//@喝七喜的LBJ: 一个笔记本电脑电池都能把人吓成这样~ //@张晨初艺术空间: [吃惊] //@六安自媒体: 求证 //@郭晏平: 首都机场？[吃惊]"
+        android:textColor="@color/home_original_weiboitem_font"
+        android:textSize="@dimen/home_original_weiboitem_font" />
+
+    <EditText
+        android:editable="false"
+        android:id="@+id/et_origin_weibo_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/home_retweet_weiboitem_bg_auto"
+        android:enabled="false"
+        android:lineSpacingExtra="@dimen/home_original_weiboitem_linespace"
+        android:padding="8dp"
+        android:text="\@飞常准 :  【网曝：首都机场有人带枪上飞机】 据“停机坪”公众号1月4日发布的消息，有网友报料称，有乘客把看似是玩具或道具“手枪”带上了飞机。并在机舱里拿着枪摆各种姿势合影。事件发生的地点在北京首都机场的一架飞机上。"
+        android:textColor="@color/home_retweet_weiboitem_font"
+        android:textSize="@dimen/home_retweet_weiboitem_font" />
+
+    <com.lingy.lawei.widget.NoScrollRecyclerView
+        android:id="@+id/rv_imageList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
 </LinearLayout>
