--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="home_weiboitem_title_profile_name">14sp</dimen><!--发微博用户-->
     <dimen name="home_weiboitem_title_profile_time">12sp</dimen><!--微博时间-->
     <dimen name="home_weiboitem_title_weibocomefrom">12sp</dimen><!--微博来源-->
+    <dimen name="alarm_item_padding_start_24dp">24dp</dimen>
 
     <!--顶部标题栏的高度-->
     <dimen name="topbar_height">45dp</dimen>
